# ArbiTrader

./: Makefile  README.md  flake8  pyproject.toml
apps/: ingest_normalize_runner.py
crypto_ensemble/: __init__.py  core
crypto_ensemble/1_data/1_ingestion/1_connectors/: MODULE.md  base_connector.py  binance_us_connector.py  coinbase_connector.py  kraken_connector.py  publisher.py
crypto_ensemble/1_data/1_ingestion/2_normalizer/: MODULE.md  normalizer_orderbook.py  normalizer_trade.py  symbol_map.yaml  tick_composer.py
crypto_ensemble/1_data/1_ingestion/3_router/: MODULE.md  router.py
crypto_ensemble/1_data/1_ingestion/4_sinks/: MODULE.md  sink_cold_parquet.py  sink_hot_redis.py
crypto_ensemble/1_data/1_ingestion/5_health/: MODULE.md  (+2 more)
crypto_ensemble/2_core/: dataclasses.py  errors.py  utils_logging.py  validators.py
crypto_ensemble/2_core/schemas/: Orderbook.v1.json  RawFrame.v2.json  Tick.v1.json  Trade.v1.json  VenueStatus.v1.json
crypto_ensemble/6_monitoring/: metrics.py
crypto_ensemble/7_tests_chain/: __init__.py  runner.py
crypto_ensemble/7_tests_chain/pipelines/: p1_raw_to_normalized.yml  p2_tick_pipeline.yml
crypto_ensemble/aliases/: __init__.py  s1_data.py  s2_core.py  s3_router.py  s4_sinks.py  s5_health.py  s6_capture.py  s6_monitoring.py
crypto_ensemble/stubs/: capture_cli.pyi  coinbase_connector.pyi  heartbeat.pyi  kraken_connector.pyi  latency_probe.pyi  router.pyi  sink_cold_parquet.pyi  sink_hot_redis.pyi
examples/: mini.yml
fastjsonschema/: __init__.py
redis/asyncio/: __init__.py
websockets/: __init__.py
yaml/: __init__.py
(+30 files in other folders)
